--- a/script/server-config.yaml
+++ b/script/server-config.yaml
@@ -2,7 +2,7 @@ package: handler
 generate:
   gin-server: true
   embedded-spec: true
-additional-imports:
-  - package: github.com/devsapp/serverless-stable-diffusion-api/pkg/models
-    alias: .
+#additional-imports:
+#  - package: github.com/devsapp/serverless-stable-diffusion-api/pkg/models
+#    alias: .
 output: pkg/handler/interface.go
