--- a/proxy.yaml
+++ b/proxy.yaml
@@ -1,7 +1,7 @@
 dbSqlite: ./sqlite3
 ossEndpoint: oss-cn-beijing.aliyuncs.com
 bucket: sd-api-t
-sdPath: /Users/wangjia/code/dev/online/stable-diffusion-webui
+sdPath: /mnt/auto/sd
 otsEndpoint: https://sd-api-test.cn-beijing.ots.aliyuncs.com
 otsInstanceName: sd-api-t
 otsMaxVersion: 1
