oss support remote and local mode
Signed-off-by: jiaw127 <jiaw127@163.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -4,6 +4,8 @@ otsTimeToAlive: -1
 otsMaxVersion: 1
 ossEndpoint: oss-cn-beijing.aliyuncs.com
 bucket: sd-api-t
+ossMode: local
+ossPath: /mnt/oss
 dbSqlite: ./sqlite3
 listenInterval: 1
 sdUrlPrefix: http://localhost:7861
