fix local oss bug
Signed-off-by: jiaw127 <jiaw127@163.com>

--- a/proxy.yaml
+++ b/proxy.yaml
@@ -1,7 +1,7 @@
 dbSqlite: ./sqlite3
 ossEndpoint: oss-cn-beijing.aliyuncs.com
 bucket: sd-api-t
-ossMode: remote
+ossMode: local
 ossPath: /mnt/oss
 sdPath: /mnt/auto/sd
 otsEndpoint: https://sd-api-test.cn-beijing.ots.aliyuncs.com
