fix fc environment cases (#10)
* add proxy server and handler

Signed-off-by: jiaw127 <jiaw127@163.com>

* add pkg/fucntion manager

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix panic

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix func dataStore

Signed-off-by: jiaw127 <jiaw127@163.com>

* delete dataStore

Signed-off-by: jiaw127 <jiaw127@163.com>

* update OtsEndPoint->OtsEndpoint

Signed-off-by: jiaw127 <jiaw127@163.com>

* add agent server and sqlite dataStore

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments with datastore

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments

Signed-off-by: jiaw127 <jiaw127@163.com>

* add ots && oss && db listen event

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix comments

Signed-off-by: jiaw127 <jiaw127@163.com>

* update func -> modelService

Signed-off-by: jiaw127 <jiaw127@163.com>

* add function manager

Signed-off-by: jiaw127 <jiaw127@163.com>

* add proxy&agent handler

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix test bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* add client pool

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* add Dockerfile and Makefile

Signed-off-by: jiaw127 <jiaw127@163.com>

* fit fc

Signed-off-by: jiaw127 <jiaw127@163.com>

* remove agent func env ak sk

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix bug

Signed-off-by: jiaw127 <jiaw127@163.com>

* fix create func

Signed-of

--- a/agent.yaml
+++ b/agent.yaml
@@ -4,8 +4,10 @@ otsTimeToAlive: -1
 otsMaxVersion: 1
 ossEndpoint: oss-cn-beijing.aliyuncs.com
 bucket: sd-api-t
+ossMode: local
+ossPath: /mnt/oss
 dbSqlite: ./sqlite3
 listenInterval: 1
 sdUrlPrefix: http://localhost:7861
 progressImageOutputSwitch: off
-sdPath: ./stable-diffusion-webui
+sdPath: /stable-diffusion-webui
