--- a/proxy.yaml
+++ b/proxy.yaml
@@ -1,6 +1,8 @@
 dbSqlite: ./sqlite3
 ossEndpoint: oss-cn-beijing.aliyuncs.com
 bucket: sd-api-t
+ossMode: local
+ossPath: /mnt/oss
 sdPath: /mnt/auto/sd
 otsEndpoint: https://sd-api-test.cn-beijing.ots.aliyuncs.com
 otsInstanceName: sd-api-t
