Adaptive sd admin
Signed-off-by: jiaw127 <jiaw127@163.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -12,3 +12,4 @@ sdUrlPrefix: http://localhost:7861
 progressImageOutputSwitch: off
 sdPath: /stable-diffusion-webui
 useLocalModel: yes
+exposeToUser: No
