--- a/agent.yaml
+++ b/agent.yaml
@@ -1,4 +1,4 @@
-otsEndpoint: https://sd-api-test.cn-beijing.ots.aliyuncs.com
+otsEndpoint: https://sd-api-t.cn-beijing.ots.aliyuncs.com
 otsInstanceName: sd-api-t
 otsTimeToAlive: -1
 otsMaxVersion: 1
