fix nowebui bug
Signed-off-by: jiaw127 <jiaw127@163.com>

--- a/proxy.yaml
+++ b/proxy.yaml
@@ -19,7 +19,7 @@ instanceType: fc.gpu.tesla.1
 memorySize: 32768
 timeout: 600
 gpuMemorySize: 16384
-extraArgs: --api
+extraArgs: --api --nowebui
 sessionExpire: 3600
 loginSwitch: off
 useLocalModel: yes
