modify /extra_image to /extra_images
Signed-off-by: zhonglun.wj <zhonglun.wj@alibaba-inc.com>

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -282,7 +282,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /extra_image:
+  /extra_images:
     post:
       summary: image upcaling
       operationId: extraImages
