add update resource env
Signed-off-by: zhonglun.wj <zhonglun.wj@alibaba-inc.com>

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -993,6 +993,9 @@ components:
         ossMountConfig:
           type: object
           description: "oss config"
+        env:
+          type: object
+          description: "sd env"
     BatchUpdateSdResourceResponse:
       properties:
         status:
